--- a/FRONTEND/elorejelzes.css
+++ b/FRONTEND/elorejelzes.css
@@ -15,6 +15,7 @@
         font-size: 30px;
     }
     .larger2{
+        padding: 20px;
         font-size: 36px;
     }
 
@@ -88,3 +89,7 @@
   font-weight: bold;
 }
 
+.tableborder{
+    border: 2px solid yellowgreen;
+    border-radius: 30px;
+}
